<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:background="@drawable/main_bg">

    <com.zx.zxtvsettings.view.ViewStatusTitleView
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px60"
        android:layout_margin="@dimen/px20"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="150dp">

            <!-- tetherSwitch -->
            <LinearLayout
                android:id="@+id/tetherSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:clickable="true"
                android:nextFocusLeft="@+id/btn_tethering_id"
                android:nextFocusUp="@+id/tetherSwitch"
                android:background="@drawable/radio_button_background_light"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/wifi_tether_checkbox_text"
                    android:textColor="@color/white"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/tetherSwitch_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"/>
                <View 
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                
                <Switch
                    android:id="@+id/tetherSwitch_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="false"
                    android:layout_marginRight="@dimen/px30"/>

            </LinearLayout>
            <!-- tetherSwitch -->

            <!-- tetherConfig -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/wifi_tether_config_summary"
                    android:textColor="@color/white"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/tetherConfig_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textColor="#faeded"
                    android:textSize="24sp"/>
                <View 
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/tetherConfig_button"
                    android:layout_width="@dimen/px150"
                    android:layout_height="wrap_content"
                    android:nextFocusLeft="@+id/btn_tethering_id"
                    android:text="@string/wifi_tether_config_button"
                    android:textColor="@color/white"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:background="@drawable/button_focus"/>

                <TextView
                    android:id="@+id/tetherConfig_openmark"
                    android:layout_width="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

            </LinearLayout>
            <!-- tetherConfig -->

            <!-- component: wifi_ap_dialog.xml -->
            <LinearLayout
                android:id="@+id/tetherCon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:orientation="vertical"
                android:background="@drawable/about_bg"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/wifi_ap_hotspot_title"
                        android:textColor="@color/white"
                        android:textSize="24sp"/>

                    <EditText
                        android:id="@+id/wifi_ap_ssid"
                        android:layout_width="300dp"
                        android:clickable="true"
                        android:cursorVisible="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:paddingLeft="2dp"
                        android:singleLine="true"
                        android:hint="@string/wifi_ssid_hint"
                        android:inputType="textVisiblePassword"
                        android:background="@color/white"
                        android:textColorHint="#cccccc"
                        android:textColor="#808080"
                        android:nextFocusLeft="@id/wifi_ap_ssid"
                        android:nextFocusRight="@id/wifi_ap_ssid"
                        android:nextFocusUp="@id/tetherConfig_button"
                        android:textSize="@dimen/px34"
                        android:imeOptions="actionDone"
                        android:maxLength="32" />
                    <View 
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/wifi_ap_hotspot_hint"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="left"
                    android:text="@string/wifi_ap_security_title"
                    android:textColor="@color/white"
                    android:textSize="24sp"/>

                <RadioGroup
                    android:id="@+id/wifi_ap_security_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/wifi_ap_security_open"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:paddingLeft="50dp"
                        android:background="@drawable/radio_button_background_light"
                        android:text="@string/wifi_ap_security_open_text"
                        android:nextFocusLeft="@+id/wifi_ap_security_open_text"
                        android:nextFocusRight="@id/wifi_ap_security_open"/>
                    <RadioButton
                        android:id="@+id/wifi_ap_security_wpa_psk"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:paddingLeft="50dp"
                        android:background="@drawable/radio_button_background_light"
                        android:text="@string/wifi_ap_security_wpa_psk_text"
                        android:nextFocusLeft="@id/wifi_ap_security_wpa_psk"
                        android:nextFocusRight="@id/wifi_ap_security_wpa_psk"/>
                    <RadioButton
                        android:id="@+id/wifi_ap_security_wpa2_psk"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:paddingLeft="50dp"
                        android:background="@drawable/radio_button_background_light"
                        android:text="@string/wifi_ap_security_wpa2_psk_text"
                        android:nextFocusLeft="@id/wifi_ap_security_wpa2_psk"
                        android:nextFocusRight="@id/wifi_ap_security_wpa2_psk"/>
                </RadioGroup>
                <LinearLayout
                    android:id="@+id/wifi_ap_password"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/wifi_ap_password_confirm_title"
                            android:textColor="@color/white"
                            android:textSize="24sp"/>
                        <EditText
                            android:id="@+id/wifi_ap_password_icicle"
                            android:layout_width="300dp"
                            android:clickable="true"
                            android:cursorVisible="true"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:paddingLeft="2dp"
                            android:singleLine="true"
                            android:password="true"
                            android:maxLength="63"
                            android:background="@color/white"
                            android:textColorHint="#c0c0c0"
                            android:textSize="@dimen/px32"
                            android:textColor="#808080"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:nextFocusLeft="@id/wifi_ap_password_icicle"
                            android:nextFocusRight="@id/wifi_ap_password_icicle"/>
                        <View 
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/credentials_password_too_short"
                            android:textColor="#c6fd5d5d"
                            android:textSize="24sp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/wifi_ap_password_confirm"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/wifi_ap_password_confirm_title"
                            android:textColor="@color/white"
                            android:textSize="24sp"/>
                        <EditText
                            android:id="@+id/wifi_ap_password_confirm_icicle"
                            android:layout_width="300dp"
                            android:clickable="true"
                            android:cursorVisible="true"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:paddingLeft="2dp"
                            android:singleLine="true"
                            android:password="true"
                            android:maxLength="63"
                            android:background="@color/white"
                            android:textColorHint="#C0C0C0"
                            android:textSize="@dimen/px32"
                            android:textColor="#808080"
                            android:inputType="text"
                            android:imeOptions="actionDone"
                            android:nextFocusLeft="@id/wifi_ap_password_confirm_icicle"
                            android:nextFocusRight="@id/wifi_ap_password_confirm_icicle"/>
                        <View 
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />
                    </LinearLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/wifi_ap_ok"
                    android:layout_width="@dimen/px200"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi_ap_ok"
                    android:textColor="@color/white"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:background="@drawable/button_focus"
                    android:nextFocusLeft="@id/wifi_ap_ok"
                    android:nextFocusRight="@id/wifi_ap_ok"
                    android:nextFocusDown="@id/wifi_ap_ok"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/px50"
                    android:layout_marginBottom="@dimen/px50"/>

            </LinearLayout>
            <!-- component: wifi_ap_dialog.xml -->
    </LinearLayout>
</LinearLayout>